# EdControl

./: .gitattributes  Dockerfile  ML_System_Design_Doc_Template.md  README.md  Readme_for_main_page.txt  app.py  diarization.py  emrec_model.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
WebCat/: Procfile  manage.py  requirements.txt
WebCat/Login/: func.py  models.py  urls.py  views.py
WebCat/Login/static/js/: login_script.js
WebCat/Main/: urls.py  views.py
WebCat/Projects/: func.py  models.py  urls.py  views.py
WebCat/User/: urls.py  views.py
WebCat/WebCat/: asgi.py  settings.py  urls.py  wsgi.py
WebCat/static/: staticfiles.json
WebCat/static/css/: main.css  main.min.css  nav_fix.css  profile.css  projects.css
WebCat/static/js/: create_project.js  edit_project.js  script.js
WebCat/templates/: navbar.html  sidebar.html  wrapper.html
WebCat/templates/login/: sign.html
WebCat/templates/main/: index.html
WebCat/templates/projects/: edit_project.html  new_project.html  project_by_id.html  projects.html
WebCat/templates/user/: profile.html  profile_by_id.html
css/: main.min.css  main.min.css.map
plotlycharts/: charts.py
sass/: main.scss
sidebars/: audio_analyse.py  video_analyse.py
